# kenzo-blog-backend

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  python.json
base/: urls.py  wsgi.py
base/custom_user/: apps.py  backends.py  managers.py  models.py  views.py
base/custom_user/migrations/: 0001_initial.py
base/migrations/: 0001_initial.py
base/models/: __init__.py  seo.py
base/panels/: __init__.py  seo.py
base/serializers/: image.py
base/settings/: base.py
base/templates/: base.html
blog/: urls.py
blog/helpers/: __init__.py  pagination.py
blog/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_remove_blogpostpage_category_blogpostpagecategory.py  0004_alter_blogpostpage_author.py  0005_remove_blogpostpage_author.py  0006_blogpostpage_subtitle.py  0007_blogindexpage_highlighted_post.py
blog/models/: __init__.py  blogpost.py  blogpost_category.py  category.py  index.py
blog/serializers/: __init__.py  blogpost.py
blog/views/: __init__.py  blogpost.py  highlighted_blogpost.py
home/: models.py
home/migrations/: 0003_alter_homepage_options_homepage_canonical_url_and_more.py
home/models/: __init__.py  homepage.py  homepage_blogpost.py
kenzo/: apps.py  urls.py  wsgi.py
kenzo/settings/: base.py
kenzo/templates/wagtailadmin/: admin_base.html  base.html  home.html  login.html
